misc: uniformized cmake tabs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 # - Wolfenstein: Enemy Territory 2.60b compatible client/server
 # - based on raedwulf-et: https://bitbucket.org/tcmreastwood/raedwulf-et
 #
-# Please use TABs to indent! (x8)
+# Please use TABs to indent! (x4)
 #------------------------------------------------------------------------
 cmake_minimum_required(VERSION 2.8.3)
 
@@ -81,40 +81,40 @@ LEG_BUNDLE(SQLITE3 SQlite3)
 cmake_dependent_option(CROSS_COMPILE32 "Compile 32-bit version of ET:L (64bit is incompatible with 2.60b)" ON "NOT CMAKE_SYSTEM MATCHES OpenBSD*" OFF)
 
 # Optional features
-option(FEATURE_CURL		"Enable auto-download support using cURL (client)"			ON)
-option(FEATURE_OGG_VORBIS	"Enable OGG Vorbis support (client)"					ON)
-option(FEATURE_THEORA		"Enable Theora video support (client)"					ON)
-option(FEATURE_OPENAL		"Enable OpenAL sound backend (client)"					ON)
-option(FEATURE_FREETYPE		"Enable Freetype font library support (client)"				ON)
-option(FEATURE_TRACKER		"Enable extended server statistics (server)"				OFF)
-option(FEATURE_LUA		"Enable Lua support in game code"					ON)
-option(FEATURE_MULTIVIEW	"Compile the mod files with multiview support"				ON)
-option(FEATURE_EDV		"Compile the mod files with extended demo viewer support"		ON)
-option(FEATURE_ANTICHEAT	"Enable server side anti-wallhack code"					ON)
-option(FEATURE_CURSES		"Enable PDCurses console"						OFF)
-option(FEATURE_AUTOUPDATE	"Enable updater which downloads latest ET:L files"			ON)
-option(FEATURE_RENDERER2	"Build and use the new renderer"					ON)
-option(FEATURE_RENDERER_GLES	"Set to ON if you want OpenGL ES renderer"				OFF)
-option(FEATURE_IPV6		"Enable IPv6 networking code"						OFF)
-option(FEATURE_IRC_CLIENT	"Enable IRC client"							OFF)
-option(RENDERER_DYNAMIC		"Build renderer into a dynamic library"					ON)
-option(FEATURE_WINDOWS_CONSOLE	"Build win32 executables with Windows console"				ON)
-option(FEATURE_GETTEXT		"Enable localization using tinygettext"					ON)
-option(FEATURE_JANSSON		"Enable JSON support (client)"						OFF)
-option(FEATURE_SERVERMDX	"Enable MDX support on server side"					ON)
-option(FEATURE_LIVEAUTH		"Enable ET:Live authentification support"				ON)
-option(FEATURE_DBMS		"Enable dbms support (sqlite3)"						ON)
-option(FEATURE_RATING		"Enable skill rating"							ON)
-option(FORCE_DEBUG		"Force enable legacy debug macros"					OFF)
+option(FEATURE_CURL				"Enable auto-download support using cURL (client)"		ON)
+option(FEATURE_OGG_VORBIS		"Enable OGG Vorbis support (client)"					ON)
+option(FEATURE_THEORA			"Enable Theora video support (client)"					ON)
+option(FEATURE_OPENAL			"Enable OpenAL sound backend (client)"					ON)
+option(FEATURE_FREETYPE			"Enable Freetype font library support (client)"			ON)
+option(FEATURE_TRACKER			"Enable extended server statistics (server)"			OFF)
+option(FEATURE_LUA				"Enable Lua support (mod)"								ON)
+option(FEATURE_MULTIVIEW		"Enable multiview support (mod)"						ON)
+option(FEATURE_EDV				"Enable extended demo viewer support (mod)"				ON)
+option(FEATURE_ANTICHEAT		"Enable server side anti-wallhack code (server)"		ON)
+option(FEATURE_CURSES			"Enable PDCurses console"								OFF)
+option(FEATURE_AUTOUPDATE		"Enable updater which downloads latest ET:L files"		ON)
+option(FEATURE_RENDERER2		"Build and use the new renderer"						ON)
+option(FEATURE_RENDERER_GLES	"Build and use OpenGL ES renderer"						OFF)
+option(FEATURE_IPV6				"Enable IPv6 networking code"							OFF)
+option(FEATURE_IRC_CLIENT		"Enable IRC client"										OFF)
+option(RENDERER_DYNAMIC			"Build renderer into a dynamic library"					ON)
+option(FEATURE_WINDOWS_CONSOLE	"Build win32 executables with Windows console"			ON)
+option(FEATURE_GETTEXT			"Enable localization using tinygettext"					ON)
+option(FEATURE_JANSSON			"Enable JSON support (client)"							OFF)
+option(FEATURE_SERVERMDX		"Enable MDX support on server side (mod)"				ON)
+option(FEATURE_LIVEAUTH			"Enable ET:Live authentification support (client)"		ON)
+option(FEATURE_DBMS				"Enable dbms support (sqlite3)"							ON)
+option(FEATURE_RATING			"Enable skill rating support (mod)"						ON)
+option(FORCE_DEBUG				"Force enable legacy debug macros"						OFF)
 
-cmake_dependent_option(FEATURE_LUASQL	"Enable LuaSQL in mod code (sqlite3 backend)"			ON "FEATURE_LUA" OFF)
-cmake_dependent_option(FEATURE_OMNIBOT	"Enable Omni-bot in mod code (Windows, linux and OS X only)"	ON "WIN32 OR APPLE OR CMAKE_SYSTEM_NAME MATCHES Linux" OFF)
-cmake_dependent_option(INSTALL_OMNIBOT	"Install Omni-bot"						ON "FEATURE_OMNIBOT" OFF)
+cmake_dependent_option(FEATURE_LUASQL	"Enable LuaSQL sqlite3 backend (mod)"			ON "FEATURE_LUA" OFF)
+cmake_dependent_option(FEATURE_OMNIBOT	"Enable Omni-bot support (mod)"					ON "WIN32 OR APPLE OR CMAKE_SYSTEM_NAME MATCHES Linux" OFF)
+cmake_dependent_option(INSTALL_OMNIBOT	"Install Omni-bot"								ON "FEATURE_OMNIBOT" OFF)
 
-option(ARM			"Build ARM version"							OFF)
+option(ARM						"Build ARM version"										OFF)
 
-set(ET_FS_BASEPATH		""	CACHE STRING "Copy required genuine ET files from ET_FS_BASEPATH")
-cmake_dependent_option(ET_KEY	"Copy existing etkey file from ET_FS_BASEPATH)"				ON "ET_FS_BASEPATH" OFF)
+set(ET_FS_BASEPATH "" CACHE STRING "Copy required genuine ET files from ET_FS_BASEPATH")
+cmake_dependent_option(ET_KEY	"Copy existing etkey file from ET_FS_BASEPATH)"			ON "ET_FS_BASEPATH" OFF)
 
 #-----------------------------------------------------------------
 # Setup
