misc: hello server side IRC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,8 @@ option(FEATURE_AUTOUPDATE		"Enable updater which downloads latest ET:L files"		O
 option(FEATURE_RENDERER2		"Build and use the new renderer"						ON)
 option(FEATURE_RENDERER_GLES	"Build and use OpenGL ES renderer"						OFF)
 option(FEATURE_IPV6				"Enable IPv6 networking code"							OFF)
-option(FEATURE_IRC_CLIENT		"Enable IRC client"										OFF)
+option(FEATURE_IRC_CLIENT		"Enable IRC client client side"							OFF)
+option(FEATURE_IRC_SERVER		"Enable IRC client server side"							OFF)
 option(RENDERER_DYNAMIC			"Build renderer into a dynamic library"					ON)
 option(FEATURE_WINDOWS_CONSOLE	"Build win32 executables with Windows console"			ON)
 option(FEATURE_GETTEXT			"Enable localization using tinygettext"					ON)
