misc: enhanced default config files

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -8,8 +8,8 @@
 
 set g_log ""						// Enables game logging if set. Name of game logging file - logs weapon changes, kills, connects etc.
 set g_logSync "1"					// Game logging options (0: buffered 1: sync'ed)
-set g_protect "0"					// Mod side security options.
-set g_ip_max_clients "0"			// Limits connections per IP to cvar value.
+set g_protect "0"					// Mod side security options
+set g_ip_max_clients "0"			// Limits connections per IP to cvar value
 
 // OPTIMIZATIONS
 
@@ -77,3 +77,8 @@ set lua_allowedModules ""
 //set omnibot_path "./legacy/omni-bot"
 //set omnibot_flags "0"
 //set omnibot_logsize "0"
+//bot difficulty 4
+//bot moveskill 3
+//bot minbots "-1"
+//bot maxbots "16"
+//bot balanceteams 1
