--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -9,22 +9,28 @@
 // LOGGING & PROTECTION
 
 set logfile "2"						// Enables console logging - 'etconsole.log' (1: enabled 2: enabled and sync'ed)
-set sv_protect "1"					// Getstatus response limit protection.
+set sv_protect "1"					// Getstatus response limit protection
 set sv_protectLog "sv_protect.log"	// When set all sv_protect and server security related messages are written into this log file
+set sv_floodProtect "1"				// Prevent server flooding
+set sv_pure "1"						// Enable hash check of client pk3 files
 
 // NETWORK
 
 set dedicated "2"					// 1: dedicated server for lan 2: dedicated server for internet
 set sv_advert "1"					// Send hartbeats to master server - important to set!
-//set net_ip ""						// set to override the default IP ET uses
+//set net_ip ""						// set to override the default IPv4 ET uses
 //set net_port "27960"				// set to override the default port ET uses
+//set net_ip6 ""					// set to override the default IPv6 ET uses
+//set net_port6 "27960"				// set to override the default port ET uses
 sv_timeout "40"						// Seconds without any message from connected clients
 sv_dl_timeout "240"					// Seconds without any message from downloading or preparing clients
+set sv_minping "0"					// Minimum ping required on connect (0: no minimum)
+set sv_maxping "0"					// Maximum ping allowed on connect (0: no maximum)
 
 // PASSWORDS & CLIENTS
 
-set sv_maxclients "24"				// number of players including private slots
 set g_password ""					// set to password protect the server
+set sv_maxclients "24"				// number of players including private slots
 set sv_privateclients "4"			// if set > 0, then this number of client slots will be reserved for connections
 set sv_privatepassword ""			// that have "password" set to the value of "sv_privatePassword"
 set rconpassword "" 				// remote console access password
@@ -32,9 +38,9 @@ set refereePassword ""				// referee status password
 
 // DL, RATE
 
-set sv_maxRate "25000"				// 10000 standard but poor for ET  0: unlimited
+set sv_maxRate "25000"				// 10000 standard but poor for ET (0: unlimited)
 set sv_dl_maxRate "42000"			// increase/decrease if you have plenty/little spare bandwidth
-set sv_allowDownload "0"        	// global toggle for both legacy download and web download
+set sv_allowDownload "0"			// global toggle for both legacy download and web download
 set sv_wwwDownload "0"				// toggle to enable web download
 set sv_wwwBaseURL "" 				// base URL for redirection
 set sv_wwwDlDisconnected "0"		// tell clients to perform their downloads while disconnected from the server
@@ -53,14 +59,15 @@ set server_motd5 ""
 
 // MISC SETTINGS
 
-set g_heavyWeaponRestriction "100"	// Heavy Weapon Restriction (% of team that have Heavy Weapons)
-set g_antilag "1"					// Enable Anti-Lag
+set g_heavyWeaponRestriction "100"	// Heavy weapon restriction (% of team that have Heavy Weapons)
+set g_antilag "1"					// Enable anti-lag
 set g_altStopwatchMode "0"			// Enable ABAB stopwatch team format
 set g_autofireteams "1"				// Automaticaly put team players into FireTeams
-set g_complaintlimit "6"			// Number of complaints needed to kick a player.
+set g_complaintlimit "6"			// Number of complaints needed to kick a player
+set g_disableComplaints "1"			// Disable complaints for airstrike, artillery, mortar and landmines team kills
 set g_ipcomplaintlimit "3"			// Number of different player complaints to kick a player
-set g_fastres "0"					// Toggles if player is instantly active after medic revive
-set g_friendlyFire "1"				// Toggles if Firendly Fire is on or not
+set g_fastres "0"					// Toggles instantly active player after medic revive
+set g_friendlyFire "1"				// Toggles Firendly Fire
 set g_minGameClients "8"			// Minimum number of players needed to start a match
 set g_maxlives "0"					// Number of respawns a player has
 set g_alliedmaxlives "0"			// Number of lives available to the allied team
@@ -71,17 +78,13 @@ set g_voiceChatsAllowed "4"			// Number of VSays a player can say in 10 seconds
 set g_doWarmup "0"					// Players have a warm up period
 set g_warmup "10"					// warm up time (in seconds)
 set g_spectatorInactivity "0"		// Duration of spectator inactivity before auto-cick
-set sv_floodProtect "1"				// Prevent server flooding
-set sv_pure "1"
-set sv_minping "0"					// Minimum ping required on conenct
-set sv_maxping "0"					// Maximum ping allowed on connect
 set match_latejoin "1"				// Allow players to join a match that's already begun
 set match_minplayers "4"			// Minimum number of players needed to start a match
-set match_mutespecs "0"				// Mute spectator
+set match_mutespecs "0"				// Mute spectators
 set match_readypercent "100"		// % of players 'Ready' to start match
-set match_timeoutcount "0"
-set match_warmupDamage "1"			// Toggles warmup damage 0: Off 1: Enemy Only 2: Everybody
-set team_maxplayers "0"				// Max. Number of Players that can join each team
+set match_timeoutcount "0"			// Number of timeout allowed
+set match_warmupDamage "1"			// Toggles warmup damage (0: Off 1: Enemy Only 2: Everybody)
+set team_maxplayers "0"				// Maximum number of players that can join each team
 set team_nocontrols "1"				// Disallow players from having team control
 set pmove_fixed "0"
 set pmove_msec "8"
@@ -91,31 +94,35 @@ set pmove_msec "8"
 set g_lms_teamForceBalance "1"		// Fore Team Balance
 set g_lms_roundlimit "3"			// Number of Rounds per Match
 set g_lms_matchlimit "2"			// Number of Matches
-set g_lms_currentMatch "0"			//
 set g_lms_lockTeams "0"				// Lock teams during a round
 set g_lms_followTeamOnly "1"		// Players can only spectate teammates
 
 // VOTING
 
-set g_allowVote "1"					        // Enable Voting system
-set vote_limit "5"					        // Number of votes allowed in a map
-set vote_percent "50"				        // % "Yes" votes for it to pass
-set vote_allow_config "1"			        // Allow config changing by vote
-set vote_allow_gametype "1"			        // Allow gametype changing by vote
-set vote_allow_referee "0"			        // Allow getting referee status by vote
-set vote_allow_shuffleteamsxp "1"	        // Allow team shuffling by vote
+set g_allowVote "1"							// Enable voting system
+set vote_limit "5"							// Number of votes allowed in a map
+set vote_percent "50"						// % of "Yes" votes required to pass
+set vote_allow_config "1"					// Allow config changing by vote
+set vote_allow_gametype "1"					// Allow gametype changing by vote
+set vote_allow_kick "1"						// Allow kick by vote
+set vote_allow_map "1"						// Allow map changing by vote
+set vote_allow_matchreset "1"				// Allow match reset by vote
+set vote_allow_mutespecs "1"				// Allow spectators mute by vote
+set vote_allow_nextmap "1"					// Allow changing to next map by vote
+set vote_allow_referee "0"					// Allow getting referee status by vote
+set vote_allow_shuffleteamsxp "1"			// Allow team shuffling by vote
 set vote_allow_shuffleteamsxp_norestart "1"	// Allow team shuffling no restart by vote
-set vote_allow_swapteams "1"		        // Allow team swapping by vote
-set vote_allow_friendlyfire "1"		        // Allow friendly fire toggling by vote
-set vote_allow_timelimit "0"		        // Allow map time limit changing by vote
-set vote_allow_warmupdamage "1"		        // Allow warmup damage toggling by vote
-set vote_allow_antilag "1"			        // Allow toggling Anti Lag setting by vote
-set vote_allow_balancedteams "1"	        // Allow toggling Balanced teams by vote
-set vote_allow_muting "1"			        // Allow player muting by vote
-set vote_allow_poll "1"                     // Allow free polls by vote
-set vote_allow_surrender "1"                // Allow surrender by vote
-set vote_allow_restartcampaign "1"          // Allow restart campaign by vote
-set vote_allow_nextcampaign "1"             // Allow next campaign by vote
+set vote_allow_swapteams "1"				// Allow team swapping by vote
+set vote_allow_friendlyfire "1"				// Allow friendly fire toggling by vote
+set vote_allow_timelimit "0"				// Allow map time limit changing by vote
+set vote_allow_warmupdamage "1"				// Allow warmup damage toggling by vote
+set vote_allow_antilag "1"					// Allow toggling Anti Lag setting by vote
+set vote_allow_balancedteams "1"			// Allow toggling Balanced teams by vote
+set vote_allow_muting "1"					// Allow player muting by vote
+set vote_allow_surrender "1"				// Allow surrender by vote
+set vote_allow_restartcampaign "1"			// Allow restart campaign by vote
+set vote_allow_nextcampaign "1"				// Allow next campaign by vote
+set vote_allow_poll "1"						// Allow free polls by vote
 
 // MOD CFG - put mod related vars in an own config
 exec legacy.cfg
@@ -131,5 +138,5 @@ exec mapvotecycle.cfg				// Map Voting mode
 
 // in case the game dies with an ERR_DROP
 // or any situation leading to server running with no map
-//set com_watchdog "10"				// defaults 60
+//set com_watchdog "60"							// defaults 60
 set com_watchdog_cmd "exec mapvotecycle.cfg"	// defaults to quit
