--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,10 +104,10 @@ option(FEATURE_GETTEXT			"Enable localization using tinygettext"					ON)
 option(FEATURE_JANSSON			"Enable JSON support (client)"							OFF)
 option(FEATURE_SERVERMDX		"Enable MDX support on server side (mod)"				ON)
 option(FEATURE_DBMS				"Enable dbms support (sqlite3)"							ON)
-option(FEATURE_RATING			"Enable skill rating support (mod)"						ON)
 option(FORCE_DEBUG				"Force enable legacy debug macros"						OFF)
 
 cmake_dependent_option(FEATURE_LUASQL	"Enable LuaSQL sqlite3 backend (mod)"			ON "FEATURE_LUA" OFF)
+cmake_dependent_option(FEATURE_RATING	"Enable skill rating support (mod)"				ON "FEATURE_DBMS" OFF)
 cmake_dependent_option(FEATURE_OMNIBOT	"Enable Omni-bot support (mod)"					ON "WIN32 OR APPLE OR CMAKE_SYSTEM_NAME MATCHES Linux" OFF)
 cmake_dependent_option(INSTALL_OMNIBOT	"Install Omni-bot"								ON "FEATURE_OMNIBOT" OFF)
 
