ui: added shuffle by rating menu options, refs #403

--- a/etmain/configs/legacy1.config
+++ b/etmain/configs/legacy1.config
@@ -78,6 +78,8 @@ init
   setl vote_allow_referee 1
   setl vote_allow_shuffleteamsxp 0
   setl vote_allow_shuffleteamsxp_norestart 0
+  setl vote_allow_shuffleteamssr 0
+  setl vote_allow_shuffleteamssr_norestart 0
   setl vote_allow_surrender 0
   setl vote_allow_swapteams 1
   setl vote_allow_timelimit 1
