--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -110,8 +110,10 @@ set vote_allow_matchreset "1"				// Allow match reset by vote
 set vote_allow_mutespecs "1"				// Allow spectators mute by vote
 set vote_allow_nextmap "1"					// Allow changing to next map by vote
 set vote_allow_referee "0"					// Allow getting referee status by vote
-set vote_allow_shuffleteamsxp "1"			// Allow team shuffling by vote
-set vote_allow_shuffleteamsxp_norestart "1"	// Allow team shuffling no restart by vote
+set vote_allow_shuffleteamsxp "1"			// Allow team XP shuffling by vote
+set vote_allow_shuffleteamsxp_norestart "1"	// Allow team XP shuffling no restart by vote
+set vote_allow_shuffleteamssr "1"			// Allow team SR shuffling by vote
+set vote_allow_shuffleteamssr_norestart "1"	// Allow team SR shuffling no restart by vote
 set vote_allow_swapteams "1"				// Allow team swapping by vote
 set vote_allow_friendlyfire "1"				// Allow friendly fire toggling by vote
 set vote_allow_timelimit "0"				// Allow map time limit changing by vote
