cmake: added set option for GeoIP in CPackOptions.cmake.in, refs #1017

--- a/cmake/CPackOptions.cmake.in
+++ b/cmake/CPackOptions.cmake.in
@@ -28,4 +28,6 @@ if(CPACK_GENERATOR MATCHES "NSIS")
 	set(FILE_VERSION "@ETL_CMAKE_PROD_VERSIONDOT@")
 	set(OMNIBOT_ARCHIVE "@ETLEGACY_OMNIBOT_ARCHIVE@")
 	set(OMNIBOT_ARCHIVE_URL "@ETLEGACY_OMNIBOT_ARCHIVE_URL@")
+	set(ETLEGACY_GEOIP_ARCHIVE "@ETLEGACY_GEOIP_ARCHIVE@")
+	set(ETLEGACY_GEOIP_ARCHIVE_URL "@ETLEGACY_GEOIP_ARCHIVE_URL@")
 endif(CPACK_GENERATOR MATCHES "NSIS")
