CMakeLists.txt added option for downloading GeoIP compressed file, refs #1017

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ cmake_dependent_option(FEATURE_OMNIBOT	"Enable Omni-bot support (mod)"					ON "W
 cmake_dependent_option(INSTALL_OMNIBOT	"Install Omni-bot"								ON "FEATURE_OMNIBOT" OFF)
 
 option(ARM						"Build ARM version"										OFF)
+option(INSTALL_GEOIP	"Install GeoIP"												 ON)
 
 set(ET_FS_BASEPATH "" CACHE STRING "Copy required genuine ET files from ET_FS_BASEPATH")
 cmake_dependent_option(ET_KEY	"Copy existing etkey file from ET_FS_BASEPATH)"			ON "ET_FS_BASEPATH" OFF)
@@ -186,6 +187,10 @@ if(INSTALL_OMNIBOT AND BUILD_MOD)
 	include(cmake/ETLInstallOmniBot.cmake)
 endif(INSTALL_OMNIBOT AND BUILD_MOD)
 
+if(INSTALL_GEOIP AND BUILD_MOD)
+	include(cmake/ETLInstallGeoIP.cmake)
+endif(INSTALL_GEOIP AND BUILD_MOD)
+	
 # Generate install and uninstall packs
 include(cmake/ETLInstall.cmake)
 
