--- a/cmake/NSIS.template.in
+++ b/cmake/NSIS.template.in
@@ -3,6 +3,7 @@
 ; ------------------------
 ; Before running NSIS, ensure to add in the misc\wininstaller folder:
 ; - the NSIS zip plug-in             (http://nsis.sourceforge.net/ZipDLL_plug-in)
+; - the NSIS UnTGZ plug-in           (http://nsis.sourceforge.net/UnTGZ_plug-in)
 ; - the NSIS md5 plug-in (ANSI)      (http://nsis.sourceforge.net/MD5_plugin)
 ; - the NSIS simple firewall plug-in (http://nsis.sourceforge.net/NSIS_Simple_Firewall_Plugin)
 
@@ -119,6 +120,7 @@ LangString DESC_Section21 ${LANG_ENGLISH} "Delete ETKEY and all created or downl
 LangString DESC_Section22 ${LANG_ENGLISH} "ET: Legacy requires MS VC++ 2013 Redistributable, do you want to install it?"
 LangString DESC_Section23 ${LANG_ENGLISH} "Download Error: Couldn't fetch GeoIP file."
 LangString DESC_Section24 ${LANG_ENGLISH} "Fatal Error: GeoIP extraction failed."
+LangString DESC_Section25 ${LANG_ENGLISH} "Install GeoIP file."
 VIProductVersion "@FILE_VERSION@"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "ProductName" "Enemy Territory Legacy Installer"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "Comments" "ETL game installer"
@@ -127,7 +129,6 @@ VIAddVersionKey /LANG=${LANG_ENGLISH} "LegalTrademarks" "© 2012-2017 ET:Legacy T
 VIAddVersionKey /LANG=${LANG_ENGLISH} "LegalCopyright" "© 2012-2017 ET:Legacy Team"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "FileDescription" "ETL Installer"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "FileVersion" "@FILE_VERSION@"
-LangString DESC_Section25 ${LANG_ENGLISH} "Install GeoIP file. "
 
 ; Polish
 LangString DESC_Section1 ${LANG_POLISH} "ET: Legacy ${VERSION} zostalo zainstalowane na twoim komputerze.$\n$\n\
@@ -155,6 +156,7 @@ LangString DESC_Section21 ${LANG_POLISH} "Usun ETKEY i wszystkie inne pliki z fo
 LangString DESC_Section22 ${LANG_POLISH} "ET: Legacy wymaga MS VC++ 2013 Redistributable, czy chcesz to zaintalowac?"
 LangString DESC_Section23 ${LANG_POLISH} "Blad Pobierania: Nie udalo sie sciagnac pliku GeoIP."
 LangString DESC_Section24 ${LANG_POLISH} "Blad Krytyczny: Wypakowywanie GeoIP nie powiodlo sie."
+LangString DESC_Section25 ${LANG_POLISH} "Zainstaluj GeoIP"
 VIAddVersionKey /LANG=${LANG_POLISH} "ProductName" "Instalator Enemy Territory Legacy"
 VIAddVersionKey /LANG=${LANG_POLISH} "Comments" "Instalator gry ETL"
 VIAddVersionKey /LANG=${LANG_POLISH} "CompanyName" "Legacy Team"
@@ -162,7 +164,6 @@ VIAddVersionKey /LANG=${LANG_POLISH} "LegalTrademarks" "© 2012-2017 ET:Legacy Te
 VIAddVersionKey /LANG=${LANG_POLISH} "LegalCopyright" "© 2012-2017 ET:Legacy Team"
 VIAddVersionKey /LANG=${LANG_POLISH} "FileDescription" "Instalator ETL"
 VIAddVersionKey /LANG=${LANG_POLISH} "FileVersion" "@FILE_VERSION@"
-LangString DESC_Section25 ${LANG_POLISH} "Zainstaluj GeoIP"
 
 ; ------------------------
 ; INSTALL
@@ -330,13 +331,13 @@ Section "GeoIP" GEOIP
         IDCANCEL END IDRETRY GET_GEOIP
 
     UNPACK_GEOIP:
-        ZipDLL::extractall "$TEMP\@ETLEGACY_GEOIP_ARCHIVE@" "$INSTDIR\legacy"
+        untgz::extract "$TEMP\@ETLEGACY_GEOIP_ARCHIVE@" "$INSTDIR\legacy"
         IfFileExists "$INSTDIR\legacy\GeoIP.dat" END
         MessageBox MB_ICONEXCLAMATION|MB_OK $(DESC_Section24)
 
     END:
 SectionEnd
-		
+
 Section -URI
     WriteRegStr HKCR "et" "URL Protocol" ""
     WriteRegStr HKCR "et" "" "URL: Enemy Territory Protocol"
@@ -425,10 +426,10 @@ FunctionEnd
 
 ; Section descriptions
 !insertmacro MUI_FUNCTION_DESCRIPTION_BEGIN
-    !insertmacro MUI_DESCRIPTION_TEXT ${FILES} $(DESC_Section16)
-    !insertmacro MUI_DESCRIPTION_TEXT ${ASSETS} $(DESC_Section17)
-    !insertmacro MUI_DESCRIPTION_TEXT ${OMNIBOT} $(DESC_Section18)
-	!insertmacro MUI_DESCRIPTION_TEXT ${GEOIP} $(DESC_Section25)
+!insertmacro MUI_DESCRIPTION_TEXT ${FILES} $(DESC_Section16)
+!insertmacro MUI_DESCRIPTION_TEXT ${ASSETS} $(DESC_Section17)
+!insertmacro MUI_DESCRIPTION_TEXT ${OMNIBOT} $(DESC_Section18)
+!insertmacro MUI_DESCRIPTION_TEXT ${GEOIP} $(DESC_Section25)
 !insertmacro MUI_FUNCTION_DESCRIPTION_END
 
 ; ------------------------
