--- a/cmake/CPackOptions.cmake.in
+++ b/cmake/CPackOptions.cmake.in
@@ -28,6 +28,8 @@ if(CPACK_GENERATOR MATCHES "NSIS")
 	set(FILE_VERSION "@ETL_CMAKE_PROD_VERSIONDOT@")
 	set(OMNIBOT_ARCHIVE "@ETLEGACY_OMNIBOT_ARCHIVE@")
 	set(OMNIBOT_ARCHIVE_URL "@ETLEGACY_OMNIBOT_ARCHIVE_URL@")
-	set(ETLEGACY_GEOIP_ARCHIVE "@ETLEGACY_GEOIP_ARCHIVE@")
-	set(ETLEGACY_GEOIP_ARCHIVE_URL "@ETLEGACY_GEOIP_ARCHIVE_URL@")
+	set(GEOIP_ARCHIVE "@ETLEGACY_GEOIP_ARCHIVE@")
+	set(GEOIP_ARCHIVE_URL "@ETLEGACY_GEOIP_ARCHIVE_URL@")
+	set(WOLFADMIN_ARCHIVE "@ETLEGACY_WOLFADMIN_ARCHIVE@")
+	set(WOLFADMIN_ARCHIVE_URL "@ETLEGACY_WOLFADMIN_ARCHIVE_URL@")
 endif(CPACK_GENERATOR MATCHES "NSIS")
