--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,10 +109,13 @@ option(FORCE_DEBUG				"Force enable legacy debug macros"						OFF)
 cmake_dependent_option(FEATURE_LUASQL	"Enable LuaSQL sqlite3 backend (mod)"			ON "FEATURE_LUA" OFF)
 cmake_dependent_option(FEATURE_RATING	"Enable skill rating support (mod)"				ON "FEATURE_DBMS" OFF)
 cmake_dependent_option(FEATURE_OMNIBOT	"Enable Omni-bot support (mod)"					ON "WIN32 OR APPLE OR CMAKE_SYSTEM_NAME MATCHES Linux" OFF)
-cmake_dependent_option(INSTALL_OMNIBOT	"Install Omni-bot"								ON "FEATURE_OMNIBOT" OFF)
 
-option(INSTALL_GEOIP			"Install GeoLite country geolocation database"			ON)
-option(INSTALL_WOLFADMIN		"Install WolfAdmin server enhancement suite"			ON)
+option(INSTALL_EXTRA			"Install extra add-ons (omni-bot, geoip, wolfadmin)."	ON)
+
+cmake_dependent_option(INSTALL_OMNIBOT		"Install Omni-bot"							ON "INSTALL_EXTRA" OFF)
+cmake_dependent_option(INSTALL_GEOIP		"Install GeoLite geolocation database"		ON "INSTALL_EXTRA" OFF)
+cmake_dependent_option(INSTALL_WOLFADMIN	"Install WolfAdmin enhancement suite"		ON "INSTALL_EXTRA" OFF)
+
 option(ARM						"Build ARM version"										OFF)
 
 set(ET_FS_BASEPATH "" CACHE STRING "Copy required genuine ET files from ET_FS_BASEPATH")
