--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ install:
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
-  - cmd: easybuild.bat clean build package
+  - cmd: easybuild.bat clean build package -noextra
 
 # to disable automatic builds
 build: on
