--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,10 @@ root = true
 
 [*]
 indent_style = tab
-end_of_line = lf
+tab_width = 4
+# indent_style = space
+# indent_size = 4
+# end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
