--- a/cmake/git_version.h.in
+++ b/cmake/git_version.h.in
@@ -28,3 +28,9 @@
 */
 #define PRODUCT_VERSION @ETL_CMAKE_PROD_VERSION@
 #define PRODUCT_VERSIONSTR "@ETL_CMAKE_PROD_VERSIONSTR@"
+
+/**
+* @def PRODUCT_BUILD_TIME
+* @brief Build time information in UTC
+*/
+#define PRODUCT_BUILD_TIME "@ETL_CMAKE_BUILD_TIME@ UTC"
