--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -8,24 +8,26 @@
 
 // LOGGING & PROTECTION
 
-set logfile "2"						// Enables console logging - 'etconsole.log' (1: enabled 2: enabled and sync'ed)
-set sv_protect "1"					// Getstatus response limit protection
-set sv_protectLog "sv_protect.log"	// When set all sv_protect and server security related messages are written into this log file
-set sv_floodProtect "1"				// Prevent server flooding
-set sv_pure "1"						// Enable hash check of client pk3 files
+set logfile "2"						// enables console logging - 'etconsole.log' (1: enabled 2: enabled and sync'ed)
+set sv_protect "1"					// getstatus response limit protection
+set sv_protectLog "sv_protect.log"	// when set all sv_protect and server security related messages are written into this log file
+set sv_floodProtect "1"				// prevent server flooding
+set sv_pure "1"						// enable hash check of client pk3 files
 
 // NETWORK
 
 set dedicated "2"					// 1: dedicated server for lan 2: dedicated server for internet
-set sv_advert "1"					// Send hartbeats to master server - important to set!
+set sv_advert "1"					// send hartbeats to master server - important to set!
 //set net_ip ""						// set to override the default IPv4 ET uses
 //set net_port "27960"				// set to override the default port ET uses
 //set net_ip6 ""					// set to override the default IPv6 ET uses
 //set net_port6 "27960"				// set to override the default port ET uses
-sv_timeout "40"						// Seconds without any message from connected clients
-sv_dl_timeout "240"					// Seconds without any message from downloading or preparing clients
-set sv_minping "0"					// Minimum ping required on connect (0: no minimum)
-set sv_maxping "0"					// Maximum ping allowed on connect (0: no maximum)
+sv_timeout "40"						// seconds without any message from connected clients
+sv_dl_timeout "240"					// seconds without any message from downloading or preparing clients
+set sv_minping "0"					// minimum ping required on connect (0: no minimum)
+set sv_maxping "0"					// maximum ping allowed on connect (0: no maximum)
+set sv_ipMaxClients "0"			    // limits connections per IP to cvar value (0: no maximum)
+
 
 // PASSWORDS & CLIENTS
 
@@ -59,72 +61,72 @@ set server_motd5 ""
 
 // MISC SETTINGS
 
-set g_heavyWeaponRestriction "100"	// Heavy weapon restriction (% of team that have Heavy Weapons)
-set g_antilag "1"					// Enable anti-lag
-set g_altStopwatchMode "0"			// Enable ABAB stopwatch team format
+set g_heavyWeaponRestriction "100"	// heavy weapon restriction (% of team that have Heavy Weapons)
+set g_antilag "1"					// enable anti-lag
+set g_altStopwatchMode "0"			// enable ABAB stopwatch team format
 set g_autofireteams "1"				// Automaticaly put team players into FireTeams
-set g_complaintlimit "6"			// Number of complaints needed to kick a player
-set g_disableComplaints "1"			// Disable complaints for airstrike, artillery, mortar and landmines team kills
-set g_ipcomplaintlimit "3"			// Number of different player complaints to kick a player
-set g_fastres "0"					// Toggles instantly active player after medic revive
-set g_friendlyFire "1"				// Toggles Firendly Fire
-set g_minGameClients "8"			// Minimum number of players needed to start a match
-set g_maxlives "0"					// Number of respawns a player has
-set g_alliedmaxlives "0"			// Number of lives available to the allied team
-set g_axismaxlives "0"				// Number of lives available to the axis team
-set g_teamforcebalance "1"			// Stop players from joining a team with more players
-set g_noTeamSwitching "0"			// Disallow players from joining a team with more players
-set g_voiceChatsAllowed "4"			// Number of VSays a player can say in 10 seconds
-set g_doWarmup "0"					// Players have a warm up period
+set g_complaintlimit "6"			// number of complaints needed to kick a player
+set g_disableComplaints "1"			// disable complaints for airstrike, artillery, mortar and landmines team kills
+set g_ipcomplaintlimit "3"			// number of different player complaints to kick a player
+set g_fastres "0"					// toggles instantly active player after medic revive
+set g_friendlyFire "1"				// toggles Firendly Fire
+set g_minGameClients "8"			// minimum number of players needed to start a match
+set g_maxlives "0"					// number of respawns a player has
+set g_alliedmaxlives "0"			// number of lives available to the allied team
+set g_axismaxlives "0"				// number of lives available to the axis team
+set g_teamforcebalance "1"			// stop players from joining a team with more players
+set g_noTeamSwitching "0"			// disallow players from joining a team with more players
+set g_voiceChatsAllowed "4"			// number of VSays a player can say in 10 seconds
+set g_doWarmup "0"					// players have a warm up period
 set g_warmup "10"					// warm up time (in seconds)
-set g_spectatorInactivity "0"		// Duration of spectator inactivity before auto-cick
-set match_latejoin "1"				// Allow players to join a match that's already begun
-set match_minplayers "4"			// Minimum number of players needed to start a match
-set match_mutespecs "0"				// Mute spectators
+set g_spectatorInactivity "0"		// duration of spectator inactivity before auto-cick
+set match_latejoin "1"				// allow players to join a match that's already begun
+set match_minplayers "4"			// minimum number of players needed to start a match
+set match_mutespecs "0"				// mute spectators
 set match_readypercent "100"		// % of players 'Ready' to start match
-set match_timeoutcount "0"			// Number of timeout allowed
-set match_warmupDamage "1"			// Toggles warmup damage (0: Off 1: Enemy Only 2: Everybody)
-set team_maxplayers "0"				// Maximum number of players that can join each team
-set team_nocontrols "1"				// Disallow players from having team control
+set match_timeoutcount "0"			// number of timeout allowed
+set match_warmupDamage "1"			// toggles warmup damage (0: Off 1: Enemy Only 2: Everybody)
+set team_maxplayers "0"				// maximum number of players that can join each team
+set team_nocontrols "1"				// disallow players from having team control
 set pmove_fixed "0"
 set pmove_msec "8"
 
 // LMS ONLY SETTINGS
 
-set g_lms_teamForceBalance "1"		// Fore Team Balance
-set g_lms_roundlimit "3"			// Number of Rounds per Match
-set g_lms_matchlimit "2"			// Number of Matches
-set g_lms_lockTeams "0"				// Lock teams during a round
-set g_lms_followTeamOnly "1"		// Players can only spectate teammates
+set g_lms_teamForceBalance "1"		// force Team Balance
+set g_lms_roundlimit "3"			// number of Rounds per Match
+set g_lms_matchlimit "2"			// number of Matches
+set g_lms_lockTeams "0"				// lock teams during a round
+set g_lms_followTeamOnly "1"		// players can only spectate teammates
 
 // VOTING
 
-set g_allowVote "1"							// Enable voting system
-set vote_limit "5"							// Number of votes allowed in a map
+set g_allowVote "1"							// enable voting system
+set vote_limit "5"							// number of votes allowed in a map
 set vote_percent "50"						// % of "Yes" votes required to pass
-set vote_allow_config "1"					// Allow config changing by vote
-set vote_allow_gametype "1"					// Allow gametype changing by vote
-set vote_allow_kick "1"						// Allow kick by vote
-set vote_allow_map "1"						// Allow map changing by vote
-set vote_allow_matchreset "1"				// Allow match reset by vote
-set vote_allow_mutespecs "1"				// Allow spectators mute by vote
-set vote_allow_nextmap "1"					// Allow changing to next map by vote
-set vote_allow_referee "0"					// Allow getting referee status by vote
-set vote_allow_shuffleteamsxp "1"			// Allow team XP shuffling by vote
-set vote_allow_shuffleteamsxp_norestart "1"	// Allow team XP shuffling no restart by vote
-set vote_allow_shuffleteamssr "1"			// Allow team SR shuffling by vote
-set vote_allow_shuffleteamssr_norestart "1"	// Allow team SR shuffling no restart by vote
-set vote_allow_swapteams "1"				// Allow team swapping by vote
-set vote_allow_friendlyfire "1"				// Allow friendly fire toggling by vote
-set vote_allow_timelimit "0"				// Allow map time limit changing by vote
-set vote_allow_warmupdamage "1"				// Allow warmup damage toggling by vote
-set vote_allow_antilag "1"					// Allow toggling Anti Lag setting by vote
-set vote_allow_balancedteams "1"			// Allow toggling Balanced teams by vote
-set vote_allow_muting "1"					// Allow player muting by vote
-set vote_allow_surrender "1"				// Allow surrender by vote
-set vote_allow_restartcampaign "1"			// Allow restart campaign by vote
-set vote_allow_nextcampaign "1"				// Allow next campaign by vote
-set vote_allow_poll "1"						// Allow free polls by vote
+set vote_allow_config "1"					// allow config changing by vote
+set vote_allow_gametype "1"					// allow gametype changing by vote
+set vote_allow_kick "1"						// allow kick by vote
+set vote_allow_map "1"						// allow map changing by vote
+set vote_allow_matchreset "1"				// allow match reset by vote
+set vote_allow_mutespecs "1"				// allow spectators mute by vote
+set vote_allow_nextmap "1"					// allow changing to next map by vote
+set vote_allow_referee "0"					// allow getting referee status by vote
+set vote_allow_shuffleteamsxp "1"			// allow team XP shuffling by vote
+set vote_allow_shuffleteamsxp_norestart "1"	// allow team XP shuffling no restart by vote
+set vote_allow_shuffleteamssr "1"			// allow team SR shuffling by vote
+set vote_allow_shuffleteamssr_norestart "1"	// allow team SR shuffling no restart by vote
+set vote_allow_swapteams "1"				// allow team swapping by vote
+set vote_allow_friendlyfire "1"				// allow friendly fire toggling by vote
+set vote_allow_timelimit "0"				// allow map time limit changing by vote
+set vote_allow_warmupdamage "1"				// allow warmup damage toggling by vote
+set vote_allow_antilag "1"					// allow toggling Anti Lag setting by vote
+set vote_allow_balancedteams "1"			// allow toggling Balanced teams by vote
+set vote_allow_muting "1"					// allow player muting by vote
+set vote_allow_surrender "1"				// allow surrender by vote
+set vote_allow_restartcampaign "1"			// allow restart campaign by vote
+set vote_allow_nextcampaign "1"				// allow next campaign by vote
+set vote_allow_poll "1"						// allow free polls by vote
 
 // MOD CFG - put mod related vars in an own config
 exec legacy.cfg
