added openssl support and fixed mingw build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ LEG_BUNDLE(ZLIB Zlib)
 LEG_BUNDLE(MINIZIP Minizip)
 LEG_BUNDLE(JPEG JPEG)
 LEG_BUNDLE(CURL Curl "NOT APPLE")
+LEG_BUNDLE(OPENSSL OpenSSL "OFF")
 LEG_BUNDLE(LUA Lua)
 LEG_BUNDLE(OGG_VORBIS OGG)
 LEG_BUNDLE(THEORA Theora)
@@ -49,6 +50,7 @@ cmake_dependent_option(CROSS_COMPILE32 "Compile 32-bit version of ET:L (64bit is
 
 # Optional features
 option(FEATURE_CURL				"Enable auto-download support using cURL (client)"		ON)
+option(FEATURE_OPENSSL			"Build openssl for curl and authentication"				OFF)
 option(FEATURE_OGG_VORBIS		"Enable OGG Vorbis support (client)"					ON)
 option(FEATURE_THEORA			"Enable Theora video support (client)"					ON)
 option(FEATURE_OPENAL			"Enable OpenAL sound backend (client)"					ON)
