--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ matrix:
         - ubuntu-toolchain-r-test
         apt:
           packages:
+          - gcc-6-multilib
+          - gcc-6-base:i386
           - nasm:i386
           - libgcc1:i386
           - libglib2.0-dev:i386
