--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ matrix:
   include:
 
 # 32 bit
-     
+
     - os: linux
       compiler: gcc
-      env: 
+      env:
         - RELEASE_TYPE=release
         - CROSS_COMPILE32=1
       addons:
@@ -32,8 +32,8 @@ matrix:
         - ubuntu-toolchain-r-test
         apt:
           packages:
-          - gcc-6-multilib
-          - gcc-6-base:i386
+          - gcc-multilib
+          - gcc-4.9-base:i386
           - nasm:i386
           - libgcc1:i386
           - libglib2.0-dev:i386
