--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,13 @@ matrix:
         - ubuntu-toolchain-r-test
         apt:
           packages:
+          - g++-4.8-multilib 
           - gcc-multilib
           - gcc-4.9-base:i386
           - nasm:i386
           - libgcc1:i386
           - libglib2.0-dev:i386
-          - libglu1-mesa:i386
+          - libglu1-mesa-dev:i386
           - libasound2-dev:i386
           - pulseaudio:i386
           - libpulse-dev:i386
