--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ matrix:
           - nasm:i386
           - libgcc1:i386
           - libglib2.0-dev:i386
-          - libglu1-mesa-dev:i386
+          - libgl1-mesa-dev:i386
           - libasound2-dev:i386
           - pulseaudio:i386
           - libpulse-dev:i386
