--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ matrix:
           - gcc-multilib
           - gcc-4.9-base:i386
           - nasm:i386
+          - libx11-6:i386
           - libgcc1:i386
           - libglib2.0-dev:i386
           - libglu1-mesa:i386
