--- a/.travis.yml
+++ b/.travis.yml
@@ -39,11 +39,8 @@ matrix:
           - libx11-6:i386
           - libx11-dev:i386
           - libgcc1:i386
-          - libglib2.0-dev:i386
-          - libglu1-mesa:i386
-          - libgl1-mesa-dev:i386
-          - libgl1-mesa-dri:i386
-          - libgl1-mesa-glx:i386
+          - libglib2.0-dev:i386          
+          - fglrx-dev:i386
           - libasound2-dev:i386
           - pulseaudio:i386
           - libpulse-dev:i386
