--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,8 @@ matrix:
           - libx11-dev:i386
           - libgcc1:i386
           - libglib2.0-dev:i386
-          - fglrx:i386        
+          - fglrx-core:i386
+          - fglrx:i386
           - fglrx-dev:i386
           - libasound2-dev:i386
           - pulseaudio:i386
