--- a/.travis.yml
+++ b/.travis.yml
@@ -22,30 +22,30 @@ matrix:
 
 # 32 bit
 
-    - os: linux
-      compiler: gcc
-      env:
-        - RELEASE_TYPE=release
-        - CROSS_COMPILE32=1
-      addons:
-        sources:
-        - ubuntu-toolchain-r-test
-        apt:
-          packages:
-          - g++-4.8-multilib 
-          - gcc-multilib
-          - gcc-4.9-base:i386
-          - nasm:i386
-          - libx11-6:i386
-          - libx11-dev:i386
-          - libgcc1:i386
-          - libglib2.0-dev:i386
-          - fglrx-core:i386
-          - fglrx:i386
-          - fglrx-dev:i386
-          - libasound2-dev:i386
-          - pulseaudio:i386
-          - libpulse-dev:i386
+# FIXME: enable this when ubuntu/dist is able to install fglrx
+#    - os: linux
+#      compiler: gcc
+#      env:
+#        - RELEASE_TYPE=release
+#        - CROSS_COMPILE32=1
+#      addons:
+#        sources:
+#        - ubuntu-toolchain-r-test
+#        apt:
+#          packages:
+#          - g++-4.8-multilib 
+#          - gcc-multilib
+#          - gcc-4.9-base:i386
+#          - nasm:i386
+#          - libx11-6:i386
+#          - libx11-dev:i386
+#          - libgcc1:i386
+#          - libglib2.0-dev:i386
+#          - fglrx:i386
+#          - fglrx-dev:i386
+#          - libasound2-dev:i386
+#          - pulseaudio:i386
+#          - libpulse-dev:i386
 
 # 64 bit
 
