game: fix configs are not loaded

--- a/etmain/configs/legacy5.config
+++ b/etmain/configs/legacy5.config
@@ -89,13 +89,13 @@ init
   setl g_mapscriptdirectory "mapscripts"
   setl g_mapConfigs ""
 
-  setl skill_battlesense "-1"
-  setl skill_engineer "-1"
-  setl skill_medic "-1"
-  setl skill_fieldops "-1"
-  setl skill_lightweapons "-1"
-  setl skill_soldier "-1"
-  setl skill_covertops "-1"
+  setl skill_battlesense -1
+  setl skill_engineer -1
+  setl skill_medic -1
+  setl skill_fieldops -1
+  setl skill_lightweapons -1
+  setl skill_soldier -1
+  setl skill_covertops -1
 
   setl g_intermissiontime 20
   setl g_multiview 0
