misc: update etl configs (don't overwrite wolfadmin by default)

--- a/etmain/configs/defaultcomp.config
+++ b/etmain/configs/defaultcomp.config
@@ -11,7 +11,7 @@ init
 	setl g_teamforcebalance 0
 	setl g_lms_teamForceBalance 0
 	setl g_voicechatsallowed 5
-	setl g_warmup 10
+	setl g_warmup 15
 	setl match_latejoin 0
 	setl match_mutespecs 0
 	setl match_timeoutcount 1
@@ -24,4 +24,7 @@ init
 	setl vote_limit 10
 
 	setl g_pronedelay 1
+	
+	//command "sv_cvarempty"
+	command "sv_cvar com_maxfps IN 40 125"
 }
