--- a/etmain/configs/defaultpublic.config
+++ b/etmain/configs/defaultpublic.config
@@ -24,4 +24,7 @@ init
 	setl sv_floodProtect 0
 	setl sv_fps 20
 	setl vote_limit 5
+	
+	//command "sv_cvarempty"
+	command "sv_cvar com_maxfps IN 40 125"
 }
