--- a/etmain/configs/legacy1.config
+++ b/etmain/configs/legacy1.config
@@ -65,7 +65,6 @@ init
 
   setl g_allowVote 1
   setl vote_allow_balancedteams 0
-  //setl vote_allow_cointoss 1
   setl vote_allow_config 1
   setl vote_allow_friendlyfire 0
   setl vote_allow_gametype 0
@@ -84,6 +83,7 @@ init
   setl vote_allow_swapteams 1
   setl vote_allow_timelimit 1
   setl vote_allow_warmupdamage 0
+  setl vote_allow_maprestart 1
   setl vote_limit 99
   setl vote_percent 51
 
@@ -105,12 +105,11 @@ init
   setl g_fixedphysics 1
   setl g_fixedphysicsfps 125
   setl g_campaignfile ""
-  //To be implemented
-  //setl g_ettv_flags 3
 
   setl g_pronedelay 1
 
-  setl lua_modules ""
+  // set this to disable wolfadmin or enable custom Lua files
+  //setl lua_modules ""
 
   set g_log "legacy1.log"
 
